-Added small styling to stop background image/colour clipping on mobile in landscape view.

--- a/styles/home.css
+++ b/styles/home.css
@@ -104,6 +104,7 @@ input, select, button {
     box-sizing: border-box;
     width: 100%;
     padding: 0 10px;
+    background-color: #1e1f33;
 }
 
 #profileStats {
